fix gaps

--- a/5-calculator/style.css
+++ b/5-calculator/style.css
@@ -21,6 +21,8 @@
 
   --clear-hover: #d16f5a;
   --clear-active: #b55644;
+
+  --terracotta: #e35336;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
@@ -52,9 +54,8 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  gap: 30px;
+  gap: 40px;
 }
 
 header {
@@ -243,5 +244,5 @@ a {
 }
 
 a:hover {
-  color: var(--yellow-earth);
+  color: var(--operator-hover);
 }
